set max dims for display container to fix stretching on large displays. toDo fix font scaling and remove max dims for display container to fill large displays with no distortion(need to use fr or % of container sizes not px)

--- a/src/style.css
+++ b/src/style.css
@@ -159,6 +159,8 @@ body{
   width: 70vh;
   height: 85vh;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  max-width: 476px;
+  max-height: 638px;
 }
 
 #maintheader{
